container-registry/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-registry
  namespace: default
  labels:
    app: container-registry
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      containers:
        - image: registry:2.8
          imagePullPolicy: IfNotPresent
          name: registry
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /v2
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
            failureThreshold: 3
          volumeMounts:
          - name: registry-vol
            mountPath: /var/lib/registry
          - name: configuration
            mountPath: /etc/distribution
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      volumes:
      - name: registry-vol
        persistentVolumeClaim:
          claimName: container-registry
      - name: configuration
        configMap:
          name: container-registry
          defaultMode: 0755
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-container-registry
  namespace: default
  labels:
    app: ui-container-registry
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: ui-container-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui-container-registry
    spec:
      containers:
        - image: joxit/docker-registry-ui:main
          imagePullPolicy: Always
          name: ui-container-registry
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
