container-registry/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: default
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: registry
  selector:
    app: container-registry
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ui-container-registry
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      name: ui-container-registry
  selector:
    app: ui-container-registry
  type: ClusterIP
